--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-axios": "^0.17.1",
-    "react-native-paper": "^5.12.3"
+    "react-native-paper": "^5.12.3",
+    "simple-line-icons": "^2.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
